--- a/cly/src/main/resources/templates/index.html
+++ b/cly/src/main/resources/templates/index.html
@@ -35,7 +35,10 @@
 </head>
 <body>
     <h3> hello word </h3>
+
+<div id="tableId"></div>
+
 </body>
 
-<script type="text/javascript"  src="/static/script/main/fuzhugongneng.js"></script>
+<script type="text/javascript"  src="/static/script/index.js"></script>
 </html>
